bin_PROGRAMS=powerlink-cn-joystick

powerlink_cn_joystick_SOURCES=\
	src/main.c \
	src/app.c \
	src/app.h \
	src/event.c \
	src/event.h \
	src/netselect.c \
	src/netselect.h \
	src/obdcreate.c \
	src/obdcreate.h \
	src/system-linux.c \
	src/system.h \
	src/options.c \
	src/options.h \
	src/screen.c \
	src/screen.h
